# memvis

./: .gitignore
memvis_client_server/: Cargo.toml  README.md  build.rs
memvis_client_server/src/: client.rs  messages.proto  server.rs
rust_impl/: Cargo.toml
rust_impl/src/: lib.rs  main.rs
rust_impl/src/cli/: console.rs  table.rs
rust_impl/src/concurrent/: atomic_memory.rs  updater.rs
rust_impl/src/controller/: memvis_controller.rs
rust_impl/src/memory/: reader.rs  stack_pointer.rs
